# PatchMatch-CUDA

./: CMakeLists.txt  README.md  vcpkg.json
HumanFace/: HumanFace.vcxproj
HumanFace/mask/: mask100.npy  mask101.npy  mask102.npy  mask107.npy  mask109.npy  mask11.npy  mask111.npy  mask112.npy  mask117.npy  mask12.npy  mask122.npy  mask124.npy  mask125.npy  mask130.npy  mask131.npy  mask132.npy  mask138.npy  mask139.npy  mask20.npy  mask29.npy  mask31.npy  mask32.npy  mask35.npy  mask37.npy  mask39.npy  mask44.npy  mask47.npy  mask48.npy  mask49.npy  mask50.npy  mask66.npy  mask67.npy  mask7.npy  mask71.npy  mask76.npy  mask78.npy  mask81.npy  mask85.npy  mask95.npy  mask97.npy  (+1 more)
HumanFace/src/cpu/: myPatch.cpp
HumanFaceCompare/: HumanFaceCompare.vcxproj
HumanFaceCompare/include/: patch.h  stylit.h
HumanFaceCompare/mask/: mask0.npy  mask105.npy  mask110.npy  mask119.npy  mask120.npy  mask121.npy  mask123.npy  mask128.npy  mask129.npy  mask136.npy  mask140.npy  mask19.npy  mask2.npy  mask21.npy  mask25.npy  mask34.npy  mask54.npy  mask56.npy  mask58.npy  mask61.npy  mask63.npy  mask65.npy  mask74.npy  mask77.npy  mask8.npy  mask82.npy  mask83.npy  mask84.npy  mask86.npy  mask90.npy  mask91.npy
HumanFaceCompare/src/: match.cu
HumanFaceCompare/src/cpu/: myPatch.cpp
PatchMatch/: PatchMatch.sln  PatchMatch.vcxproj
PatchMatch/include/: macro.h  patch.h
PatchMatch/src/: kernel.cu  match.cu
PatchMatch/src/cpu/: main.cpp  myPatch.cpp
Processing/: Processing.vcxproj
Processing/include/: macro.h  patch.h
Processing/src/: enum_gpu.cu  kernel.cu
Processing/src/cpu/: main.cpp  myPatch.cpp
Processing/video/img/mask/: 034.npy  035.npy  038.npy
include/: macro.h  patch.h  stylit.h
include/multi_frame/: macro.h  patch.h
include/patch_match/: macro.h  patch.h
multi_frame_src/mask/: mask1.npy  mask10.npy  mask103.npy  mask104.npy  mask106.npy  mask108.npy  mask113.npy  mask114.npy  mask116.npy  mask118.npy  mask127.npy  mask13.npy  mask135.npy  mask137.npy  mask14.npy  mask16.npy  mask17.npy  mask18.npy  mask22.npy  mask23.npy  mask24.npy  mask28.npy  mask3.npy  mask33.npy  mask36.npy  mask38.npy  mask4.npy  mask40.npy  mask45.npy  mask46.npy  mask53.npy  mask57.npy  mask59.npy  mask62.npy  mask68.npy  mask69.npy  mask73.npy  mask75.npy  mask79.npy  mask88.npy  (+3 more)
multiframe/: multiframe.vcxproj
multiframe/include/: macro.h  patch.h
multiframe/mask/: mask115.npy  mask126.npy  mask133.npy  mask134.npy  mask15.npy  mask26.npy  mask27.npy  mask30.npy  mask41.npy  mask42.npy  mask43.npy  mask5.npy  mask51.npy  mask52.npy  mask55.npy  mask6.npy  mask60.npy  mask64.npy  mask70.npy  mask72.npy  mask80.npy  mask87.npy  mask89.npy  mask93.npy  mask94.npy  mask98.npy
multiframe/src/: kernel.cu
multiframe/src/cpu/: myPatch.cpp
src/: PatchMatch.cpp  kernel.cu  main.cpp  match.cu  myPatch.cpp  stylit.cpp
src/multi_frame/: kernel.cu  match.cu  myPatch.cpp
src/patch_match/: match.cu  myPatch.cpp
